# tcx-pause-remover

./: .gitignore  CLAUDE.md  LICENSE  README.md  example.tcx  pyproject.toml  tcx_pause_remover.py  test_tcx_pause_remover.py
.github/workflows/: test.yml
